--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/jest": "^29.5.12",
+    "@types/jsdom": "^21.1.7",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.1.1",
     "json5": "^2.2.3",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "jest-environment-jsdom-global": "^4.0.0"
   }
 }
