--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "devDependencies": {
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.7",
-    "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.7",
     "babel-jest": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.1.1",
@@ -24,6 +27,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "jest-environment-jsdom-global": "^4.0.0"
+    "jest-environment-jsdom-global": "^4.0.0",
+    "react": "^18.3.1"
   }
 }
